fixed login page extra spacing, added task for popup, starting working on learn more page

--- a/server/assets/css/newlogin.css
+++ b/server/assets/css/newlogin.css
@@ -14,7 +14,7 @@ main
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 85vh;
     font-family: Arial, Helvetica, sans-serif;
 }
 .login-panel
